Se agrego una mejora en el formulario

--- a/Jose_erices_G/src/components/Checkout/checkout.css
+++ b/Jose_erices_G/src/components/Checkout/checkout.css
@@ -29,3 +29,12 @@
 
 
 }
+.listadoCompra{
+    height: 51px;
+    padding: auto;
+    text-align: center;
+    width:300px;
+    border:2px solid black;
+    color:black;
+    background-color: #fba506
+}
